Add div medium for landing page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
     </div>
     <div class="container-medium">
-        <h2>modalidades del ciclismo</h2>
+        <h2>Modalidades del ciclismo</h2>
         <div class="modalidades-ciclismo">
             <div class="modalidad">
                 <div class="cuadro"></div>
